--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,8 +2,9 @@
 
 #app {
   width: 100%;
-  padding: 0;
+  padding-top: 4%;
   font-weight: normal;
+  min-height: 100vh;
 }
 
 a,
@@ -18,5 +19,14 @@ a,
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
   }
+}
+
+main {
+  flex: 1; /* Permite que el contenido principal ocupe el espacio restante */
+}
+
+footer {
+  background-color: #f8f9fa; /* Ajusta el color según tu diseño */
+  padding: 1rem; /* Espaciado interno */
 }
 
